Implemented the Spanish Language Successfully This is for the "File" menu bar only. The rest of the menu bar will be added soon

--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -1,7 +1,7 @@
 chooseLang= Language Spoken?
 
-File= "File"
-Open= "Open"
-Save= "Save"
-As= "As"
-Exit="Exit"
+File= File
+Open= Open
+Save= Save
+As= As
+Exit=Exit
