Finalised Multilingual support for Spanish - finished this for now... will need to reimplement as new filters and components get added to editing menu bar.

--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -5,3 +5,28 @@ Open= Open
 Save= Save
 As= As
 Exit=Exit
+
+#Edit window
+Edit= Edit
+Undo=Undo
+Redo=Redo
+
+#View
+View=View
+ZoomIn=Zoom In
+ZoomOut=Zoom Out
+ZoomFull=Zoom Full
+
+#Filter
+Filter=Filter
+Meanfilter= Mean filter;
+
+#Colour
+Colour=Colour
+Greyscale=Greyscale
+
+
+#language
+English=English
+Spanish=Spanish
+Language=Language
