Updated language dropdown for the new features

--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -2,9 +2,11 @@ chooseLang= Language Spoken?
 
 File= File
 Open= Open
-Save= Save
-As= As
+Save= Save 
+Saveas= Save as 
 Exit=Exit
+Export=Export
+
 
 #Edit window
 Edit= Edit
@@ -16,14 +18,29 @@ View=View
 ZoomIn=Zoom In
 ZoomOut=Zoom Out
 ZoomFull=Zoom Full
+Rotate90Right=Rotate 90 Right
+Rotate90Left=Rotate 90 Left
+Rotate180=Rotate 180
+Resize=Resize
+FlipVertical=Flip Vertical
+FlipHorizontal=Flip Horizontal
+
+
+
 
 #Filter
 Filter=Filter
 Meanfilter= Mean filter
+Softblur=Soft Blur
+Sharpenfilter= Sharpen Filter
+Medianfilter= MedianFilter
+Gaussianblur= GaussianBlur
 
 #Colour
 Colour=Colour
 Greyscale=Greyscale
+Invert=InvertColours
+ColourCycleChannel=Colour Cycle Channel
 
 
 #language
