--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -1,4 +1,4 @@
-chooseLang= Language Spoken?
+# List of English words used as the default when starting out the UI and converting it back to English from other languages
 
 File= File
 Open= Open
