Added language changes to the Alter dropdown

--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -1,5 +1,7 @@
 # List of English words used as the default when starting out the UI and converting it back to English from other languages
 
+Alter=Alter
+
 File= File
 Open= Open
 Save= Save 
