macro recording seems to work, loading of macro needs to be done

--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -49,3 +49,8 @@ ColourCycleChannel=Colour Cycle Channel
 English=English
 Spanish=Spanish
 Language=Language
+
+#Macro
+RecordMacro = Record Macro
+Macro = Macro
+StopMacro = Stop Macro
