Addressing the embos filters (draft) The hedgehog test is going to be used as an image that gets displayed to the user as a sort of before vs after to showcase to the user what each embos filter would do to do the image.

--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -37,6 +37,8 @@ Softblur=Soft Blur
 Sharpenfilter= Sharpen Filter
 Medianfilter= MedianFilter
 Gaussianblur= GaussianBlur
+Embos=Embos
+
 
 #Colour
 Colour=Colour
