Updated language bundles to include macro actions

--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -46,6 +46,12 @@ Greyscale=Greyscale
 Invert=InvertColours
 ColourCycleChannel=Colour Cycle Channel
 
+#Macro 
+Macro= Macro
+record= Record 
+stop= Stop
+load= Load
+
 
 #language
 English=English
