finish crop. need to fill out image and fix toolba

--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -71,3 +71,6 @@ LoadMacro = Load Macro
 DrawRectangle = Draw Rectangle
 DrawLine = Draw Line
 DrawEllipse = Draw Ellipse
+
+#Crop
+CropImage = Crop Image
