made mouse selection more robust

--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -74,3 +74,17 @@ DrawEllipse = Draw Ellipse
 
 #Crop
 CropImage = Crop Image
+
+
+#Message popups 
+InvalidMacroIndex = Invalid macro! The macro contains out-of-bounds mouse selection operations! Please try again with a larger image size.
+proceed= Do you want to proceed?
+selectArea= You need to select area before cropping!
+radius=Enter filter radius
+success= Filter Success!
+enterHeight=Enter Block Height
+enterWidth= Enter Block Width
+outlineColour= Choose Outline Color
+fillColour= Choose Fill Color
+drawBeforeCrop= You need to select area before drawing!
+regionOutBound=Warning! Region Selected is out of bounds.
