--- a/src/MessageBundle_en_US.properties
+++ b/src/MessageBundle_en_US.properties
@@ -77,7 +77,7 @@ CropImage = Crop Image
 
 
 #Message popups 
-InvalidMacroIndex = Invalid macro! The macro contains out-of-bounds mouse selection operations! Please try again with a larger image size.
+InvalidMacroIndex = Invalid macro warning! The macro file contains out-of-bounds mouse selection operations! These problematic operations have not been applied. 
 proceed= Do you want to proceed?
 selectArea= You need to select area before cropping!
 radius=Enter filter radius
